# thrive_well_wa

./: .pre-commit-config.yaml  Procfile  README.md  alembic.ini  main.py  pyproject.toml  test_db.sqlite
alembic/: env.py
alembic/versions/: 04b59e0749ed_revamped_columns_for_large_int.py  0c03901a0fed_forgot_to_add_the_text_to_the_messag_.py  1ad5aede6fc7_remove_message_embeddings.py  332883e61b60_change_timestamp_to_datetime.py  3acc3b14c0b6_revamped_columns_for_large_int.py  658eb61099e6_renamed_column.py  69efb6f11735_add_embeddings_column.py  72c42a9e18de_use_pgvector.py  9907c93ab706_refactored_message_class.py  99d6c536679f_revamped_columns.py  c7b3e89ca7d4_revamped_columns_for_large_int.py  ecdc5b77b3ee_change_timestamp_to_datetime.py
src/: main.py
src/api/v1/endpoints/: public_router.py
src/crud/: db_handler.py
src/endpoints/: public_router.py
src/messenger_services/: session_name.session  signal_service.py  telegram_service.py
src/models/: models.py
src/services/: guidelines.json  langgraph_handler.py  schemas.py  telegram_service.py
src/services/tools/: __init__.py  calendar_event_tool.py  open_weather_map_tool.py  rag_embedding_tool.py  tavily_search_tool.py  test.py  wikipedia_tool.py
src/tests/: message_info.txt  test_db.sqlite  test_db_handler.py  test_default.py
