[project]
name = "thrive-well-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langgraph>=0.3.31",
    "openai>=1.75.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "langchain-openai>=0.3.14",
    "langmem>=0.0.24",
    "pyppeteer>=2.0.0",
    "langchain-community>=0.3.22",
    "pyowm>=3.3.0",
    "wikipedia>=1.4.0",
    "setuptools==76.0.0",
    "tavily-python>=0.5.4",
    "sentence-transformers>=4.1.0",
    "pgvector==0.3.1",
    "langchain-postgres>=0.0.13",
    "psycopg2-binary>=2.9.10",
    "langchain-huggingface>=0.1.2",
    "ipython>=9.2.0",
    "pymupdf>=1.25.5",
]

[tool.ruff]
exclude = [
    "venv",
    "versions",
]
